# template-application-flask

./: .dockleconfig  .gitignore  .grype.yml  .hadolint.yaml  LICENSE  Makefile  README.md  code.json  copier.yml  docker-compose.debug.yml  docker-compose.yml
.github/: cd.yml  pull_request_template.md
app/: .env.template  .gitignore  .spectral.yaml  Dockerfile  Makefile  docker-compose.debug.yml  docker-compose.override.yml.example  docker-compose.yml  gunicorn.conf.py  local.env  openapi.generated.yml  openapi.yml  pyproject.toml  setup.cfg  wait-for-local-db.sh
app/api/: __main__.py  app.py  app_config.py  openapi.yaml
app/api/adapters/db/: __init__.py  client.py  config.py  flask_db.py
app/api/adapters/logging/: __init__.py  audit.py  config.py  flask_logger.py  log_formatters.py
app/api/api/: healthcheck.py  response.py  users.py
app/api/api/schemas/: response_schema.py  user_schemas.py
app/api/api/users/: __init__.py  user_blueprint.py  user_commands.py  user_routes.py  user_schemas.py
app/api/auth/: api_key_auth.py
app/api/db/: __init__.py  db_config.py
app/api/db/migrations/: alembic.ini  enum_migrations.py  env.py  run.py
app/api/db/migrations/versions/: 2022_09_12_16_18_41_64cca9571cf0_first_migration.py  2022_09_20_13_16_20_dbc5b91646a2_create_user_table.py  2022_09_21_10_43_28_e0563b34f6a6_create_user_table.py  2022_09_21_10_44_26_f9e1862f9c52_create_user_tableagain.py  2022_09_21_13_21_15_389e7f257581_add_another_enum_val.py  2022_09_21_16_21_10_f3e490aa1f24_create_user_and_role_tables.py  2022_09_22_11_13_20_964e99759832_create_user_and_role_tables.py  2022_09_22_12_39_25_0b0495734e94_create_user_and_role_tables.py  2022_12_16_create_user_and_role_tables.py  2023_02_21_cascade_on_delete.py
app/api/db/models/: __init__.py  base.py  example_person_models.py  factories.py  lookup.py  user_models.py
app/api/logging/: __init__.py  audit.py  config.py  decodelog.py  flask_logger.py  formatters.py  log_attributes.py  log_formatters.py  pii.py
app/api/models/: user.py
app/api/route/: api_context.py  connexion_validators.py  error_handlers.py  example_person_route.py  healthcheck.py  request.py  response.py  route_utils.py  user_route.py
app/api/route/handler/: example_person_handler.py  user_handler.py
app/api/route/models/: base_api_model.py  model.py  param_schema.py  user.py  user_api_models.py
app/api/route/schemas/: base_api_model.py  fields.py  request_schema.py  response_schema.py  user_schemas.py
app/api/scripts/: create_user_csv.py  generate_pet_csv.py
app/api/scripts/util/: script_util.py
app/api/services/core/: patch_params.py
app/api/services/models/: base.py  user.py
app/api/services/users/: __init__.py  create_user.py  create_user_csv.py  get_user.py  models.py  patch_user.py
app/api/util/: env_config.py  file_util.py  string_utils.py
app/api/util/collections/: __init__.py  dict.py
app/src/: __main__.py  app.py  app_config.py  fastapi_app.py
app/src/adapters/db/: __init__.py  client.py  config.py  fastapi_db.py  flask_db.py  postgres_client.py
app/src/adapters/db/clients/: postgres_client.py  postgres_config.py
app/src/adapters/db/engine/: db_engine.py  postgres_engine.py
app/src/api/: debug.py  healthcheck.py  index.py
app/src/api/users/: user_commands.py  user_routes.py  user_schemas.py
app/src/auth/: api_key_auth.py
app/src/config/: __init__.py  default.py  load.py
app/src/config/env/: dev.py  local.py  local_override_example.py  prod.py  staging.py
app/src/db/: __init__.py  bulk_ops.py
app/src/db/migrations/: env.py  run.py
app/src/db/migrations/versions/: 2023_03_17_lookupenum.py  2023_08_10_default_table_privileges.py  2023_08_11_create_user_and_role_tables.py
app/src/db/models/: base.py  user_models.py
app/src/logger/: __init__.py  config.py  fastapi_logger.py  formatters.py  pii.py
app/src/logging/: __init__.py  audit.py  config.py  decodelog.py  flask_logger.py  formatters.py  pii.py
app/src/services/users/: __init__.py  create_user.py  get_user.py  patch_user.py
app/src/util/: env_config.py  local.py
app/tests/: conftest.py
app/tests/api/adapters/db/: test_db.py  test_flask_db.py
app/tests/api/adapters/logging/: test_audit.py  test_flask_logger.py  test_logging.py
app/tests/api/auth/: test_api_key_auth.py
app/tests/api/db/: test_db.py  test_migrations.py
app/tests/api/db/models/: factories.py  test_factories.py
app/tests/api/logging/: test_audit.py  test_flask_logger.py  test_formatters.py  test_logging.py  test_pii.py
app/tests/api/route/: route_test_utils.py  test_api_context.py  test_example_person_route.py  test_healthcheck.py  test_openapi.yml  test_user_route.py  test_validators.py
app/tests/api/route/models/: test_param_schema.py
app/tests/api/scripts/: test_create_user_csv.py  test_generate_pet_csv.py
app/tests/api/util/: test_datetime_util.py  test_file_util.py  test_string_utils.py
app/tests/api/util/collections/: test_dict.py
app/tests/lib/: db_testing.py  db_utils.py  mock_db.py
app/tests/logging/: test_audit.py  test_flask_logger.py
app/tests/src/adapters/db/: test_db.py  test_fastapi_db.py  test_flask_db.py  test_postgres_client.py
app/tests/src/adapters/db/clients/: test_postgres_client.py
app/tests/src/adapters/db/engine/: test_postgres_engine.py
app/tests/src/auth/: test_api_key_auth.py
app/tests/src/config/: test_config.py
app/tests/src/db/: test_bulk_ops.py  test_migrations.py
app/tests/src/db/models/: factories.py  test_factories.py
app/tests/src/logger/: test_audit.py  test_fastapi_logger.py  test_formatters.py  test_logging.py
app/tests/src/logging/: test_audit.py  test_flask_logger.py  test_formatters.py  test_logging.py  test_pii.py
app/tests/src/route/: test_index_route.py  test_user_route.py
app/tests/src/scripts/: test_create_user_csv.py
app/tests/src/util/collections/: test_dict.py
docs/: README.md
template-only-bin/: download-and-install-template.sh  install-template.sh  update-template.sh
{{app_name}}/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  local.env
(+86 files in other folders)
