[tool.poetry]
name = "template-application-flask"
version = "0.1.0"
description = "A template flask API for building ontop of"
packages = [{ include = "src" }]
authors = ["Nava Engineering <engineering@navapbc.com>"]
# Any non-python files that are required by the application need
# to be included in the below section, remove the leading comment
# include = ["path/to/some/file", "another_file.yml"]

# Base packages for all versions of the images
# Pin the version to a specific version to speed up build times
## https://github.com/python-poetry/poetry/issues/2094
[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["mypy"], version = "1.4.41"}
alembic = "1.8.1"
psycopg2-binary = "2.9.3"
python-dotenv = "1.0.0"
pydantic = "1.10.6"
botocore = "1.29.90"
boto3 = "1.26.90"
smart-open = "6.3.0"
pytz = "2022.7.1"
APIFlask = "1.2.1"
marshmallow-dataclass = {extras = ["enum","union"], version = "8.5.11"}
marshmallow = "3.19.0"

[tool.poetry.group.dev]
optional = true

# Local only packages, any packages needed for the testing suite
# Pin the version to a specific version to speed up build times
## https://github.com/python-poetry/poetry/issues/2094
[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
black = "22.12.0"
flake8 = "6.0.0"
flake8-bugbear = "22.12.6"
flake8-alfred = "1.1.1"
isort = "5.11.4"
mypy = "0.991"
moto = {extras = ["s3"], version = "4.1.0"}
types-pytz = "2022.7.0.0"
coverage = "7.0.5"
Faker = "16.4.0"
factory-boy = "3.2.1"
bandit = "1.7.5"
pytest-watch = "4.2.0"
pytest-lazy-fixture = "0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-api = "src.__main__:main"
db-migrate-up = "src.db.migrations.run:up"
db-migrate-down = "src.db.migrations.run:down"
db-migrate-down-all = "src.db.migrations.run:downall"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
color_output = true
error_summary = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.bandit]
# Ignore audit logging test file since test audit logging requires a lot of operations that trigger bandit warnings
exclude_dirs = ["./tests/src/logging/test_audit.py"]

[[tool.mypy.overrides]]
# Migrations are generated without "-> None"
# for the returns. Rather than require manually
# fixing this for every migration generated,
# disable the check for that folder.
module = "src.db.migrations.versions.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
# Ignore deprecation warnings in library code.
# When a library has addressed its deprecation issues and we've updated the
# library, we can remove the ignore filter for that library.
filterwarnings = [
  "ignore::DeprecationWarning:botocore.*",
  "ignore::DeprecationWarning:apispec.*",
  "ignore::DeprecationWarning:certifi.*"
] # pytest-watch errors if the closing bracket is on it's own line

markers = [
  "audit: mark a test as a security audit log test, to be run isolated from other tests"
]

[tool.coverage.run]
omit = ["src/db/migrations/*.py"]
